[gd_scene load_steps=16 format=4 uid="uid://brwxt8gcaqndx"]

[ext_resource type="Script" path="res://extras/Ship Game/CameraRig.gd" id="1_2ed8r"]
[ext_resource type="Script" path="res://extras/Ship Game/Ship.gd" id="1_epte1"]
[ext_resource type="Texture2D" uid="uid://dgat334br4b1m" path="res://extras/Ship Game/shipgame_stuff.png" id="2_oxp1b"]
[ext_resource type="Texture2D" uid="uid://2hasvf1ulj30" path="res://extras/Ship Game/shipgame_tiles.png" id="4_mxgyh"]
[ext_resource type="AudioStream" uid="uid://bfxkqkmpycu4" path="res://extras/Ship Game/audio/die.wav" id="4_ngtp4"]
[ext_resource type="AudioStream" uid="uid://viy4umxyu7jq" path="res://extras/Ship Game/audio/shipgame.ogg" id="5_kgyu0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8y41c"]
size = Vector2(26, 12)

[sub_resource type="Animation" id="Animation_4s0le"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cp023"]
resource_name = "explode"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_00wp0"]
resource_name = "idle"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kc2s7"]
_data = {
"RESET": SubResource("Animation_4s0le"),
"explode": SubResource("Animation_cp023"),
"idle": SubResource("Animation_00wp0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhtfq"]
size = Vector2(64, 360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcsy0"]
size = Vector2(720, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8nocf"]
texture = ExtResource("4_mxgyh")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_ncow6"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_8nocf")

[node name="Level" type="Node2D"]

[node name="CameraRig" type="Node2D" parent="."]
position = Vector2(0, 192)
script = ExtResource("1_2ed8r")

[node name="StartDelay" type="Timer" parent="CameraRig"]
one_shot = true
autostart = true

[node name="PlayerShip" type="CharacterBody2D" parent="CameraRig"]
position = Vector2(64, 0)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_epte1")

[node name="DeathTimer" type="Timer" parent="CameraRig/PlayerShip"]
wait_time = 2.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="CameraRig/PlayerShip"]
texture = ExtResource("2_oxp1b")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraRig/PlayerShip"]
shape = SubResource("RectangleShape2D_8y41c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraRig/PlayerShip"]
libraries = {
"": SubResource("AnimationLibrary_kc2s7")
}
autoplay = "idle"

[node name="ExplodeSound" type="AudioStreamPlayer" parent="CameraRig/PlayerShip"]
stream = ExtResource("4_ngtp4")

[node name="Camera2D" type="Camera2D" parent="CameraRig"]
position = Vector2(320, -12)

[node name="BorderCollision" type="StaticBody2D" parent="CameraRig"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraRig/BorderCollision"]
position = Vector2(-32, -13)
shape = SubResource("RectangleShape2D_xhtfq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CameraRig/BorderCollision"]
position = Vector2(672, -13)
shape = SubResource("RectangleShape2D_xhtfq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CameraRig/BorderCollision"]
position = Vector2(320, -224)
shape = SubResource("RectangleShape2D_wcsy0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CameraRig/BorderCollision"]
position = Vector2(320, 200)
shape = SubResource("RectangleShape2D_wcsy0")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kgyu0")
autoplay = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAABAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAAAAAABAAAAAAALAAEAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAABAAAAAAAKAAsAAAABAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAABAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAABAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAABAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAABAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAAUAAEAAAABAAAAAAAUAAIAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAABAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAbAAEAAAABAAAAAAAbAAIAAAAAAAAAAAAcAAEAAAAAAAAAAAAdAAEAAAAAAAAAAAAeAAEAAAAAAAAAAAAUAAsAAAAAAAAAAAAVAAsAAAAAAAAAAAAWAAsAAAABAAAAAAAXAAsAAAAAAAAAAAAYAAsAAAAAAAAAAAAZAAsAAAAAAAAAAAAaAAsAAAAAAAAAAAAbAAsAAAABAAAAAAAaAAkAAAAAAAAAAAAaAAoAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAAAAAAAAAdAAoAAAABAAAAAAAdAAsAAAAAAAAAAAAiAAsAAAAAAAAAAAAfAAsAAAAAAAAAAAAgAAsAAAAAAAAAAAAhAAsAAAAAAAAAAAAhAAoAAAAAAAAAAAAiAAoAAAABAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAVAAMAAAABAAAAAAAVAAQAAAAAAAAAAAAWAAQAAAAAAAAAAAAVAAUAAAABAAAAAAAVAAYAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAABAAAAAAAWAAcAAAAAAAAAAAAXAAcAAAAAAAAAAAAWAAEAAAAAAAAAAAAXAAEAAAAAAAAAAAAYAAEAAAAAAAAAAAAeAAIAAAAAAAAAAAAfAAIAAAAAAAAAAAAfAAMAAAABAAAAAAAfAAQAAAAAAAAAAAAfAAEAAAAAAAAAAAAgAAMAAAAAAAAAAAAgAAQAAAABAAAAAAAgAAoAAAABAAAAAAAfAAUAAAABAAAAAAAgAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAbAAcAAAABAAAAAAAbAAgAAAAAAAAAAAAcAAYAAAAAAAAAAAAcAAcAAAAAAAAAAAAjAAoAAAAAAAAAAAAjAAsAAAAAAAAAAAAkAAkAAAABAAAAAAAkAAoAAAAAAAAAAAAkAAsAAAAAAAAAAAAlAAkAAAAAAAAAAAAmAAkAAAAAAAAAAAAnAAkAAAAAAAAAAAAoAAUAAAAAAAAAAAAoAAYAAAAAAAAAAAAoAAcAAAAAAAAAAAAoAAgAAAABAAAAAAAoAAkAAAAAAAAAAAAoAAQAAAAAAAAAAAApAAQAAAAAAAAAAAApAAUAAAABAAAAAAApAAYAAAAAAAAAAAAqAAQAAAAAAAAAAAAqAAUAAAABAAAAAAAqAAYAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAABAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAeAAAAAAAAAAAAAAAfAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAdAAkAAAAAAAAAAAAtAAAAAAAAAAAAAAAuAAAAAAAAAAAAAAAvAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAAxAAAAAAAAAAAAAAAxAAEAAAAAAAAAAAAyAAAAAAAAAAAAAAAyAAEAAAAAAAAAAAAzAAAAAAAAAAAAAAAvAAUAAAAAAAAAAAAvAAYAAAAAAAAAAAAwAAUAAAAAAAAAAAAwAAYAAAAAAAAAAAAxAAQAAAAAAAAAAAAxAAUAAAAAAAAAAAAxAAYAAAABAAAAAAAyAAQAAAAAAAAAAAAyAAUAAAAAAAAAAAAyAAYAAAAAAAAAAAAzAAQAAAAAAAAAAAAzAAUAAAABAAAAAAAzAAYAAAAAAAAAAAA0AAQAAAAAAAAAAAA0AAUAAAAAAAAAAAA0AAYAAAAAAAAAAAAyAAcAAAAAAAAAAAAzAAcAAAAAAAAAAAAsAAoAAAAAAAAAAAAsAAsAAAAAAAAAAAAtAAoAAAAAAAAAAAAtAAsAAAAAAAAAAAAuAAoAAAAAAAAAAAAuAAsAAAAAAAAAAAAvAAsAAAAAAAAAAAAwAAsAAAAAAAAAAAAxAAsAAAAAAAAAAAAyAAsAAAAAAAAAAAAzAAsAAAAAAAAAAAA0AAsAAAAAAAAAAAAuAAkAAAAAAAAAAAAvAAkAAAAAAAAAAAAvAAoAAAABAAAAAAAwAAoAAAAAAAAAAAAwAAQAAAAAAAAAAAAgAAYAAAABAAAAAAAlAAoAAAABAAAAAAA1AAUAAAABAAAAAAA1AAYAAAABAAAAAAA4AAAAAAABAAAAAAA4AAEAAAAAAAAAAAA4AAIAAAABAAAAAAA4AAMAAAABAAAAAAA5AAAAAAABAAAAAAA5AAEAAAAAAAAAAAA5AAIAAAAAAAAAAAA5AAMAAAABAAAAAAA6AAAAAAABAAAAAAA6AAEAAAAAAAAAAAA6AAIAAAAAAAAAAAA6AAMAAAABAAAAAAA7AAAAAAABAAAAAAA7AAEAAAABAAAAAAA8AAAAAAABAAAAAAA8AAEAAAABAAAAAAA4AAgAAAABAAAAAAA4AAkAAAAAAAAAAAA4AAoAAAAAAAAAAAA4AAsAAAABAAAAAAA5AAgAAAABAAAAAAA5AAkAAAAAAAAAAAA5AAoAAAABAAAAAAA5AAsAAAAAAAAAAAA6AAgAAAABAAAAAAA6AAkAAAAAAAAAAAA6AAoAAAABAAAAAAA6AAsAAAABAAAAAAA7AAgAAAABAAAAAAA7AAkAAAABAAAAAAA7AAoAAAAAAAAAAAA7AAsAAAAAAAAAAAA8AAgAAAABAAAAAAA8AAkAAAAAAAAAAAA8AAoAAAAAAAAAAAA8AAsAAAAAAAAAAAA9AAcAAAABAAAAAAA9AAgAAAABAAAAAAA9AAkAAAABAAAAAAA9AAoAAAAAAAAAAAA9AAsAAAABAAAAAAA+AAcAAAABAAAAAAA+AAgAAAABAAAAAAA+AAkAAAABAAAAAAA+AAoAAAABAAAAAAA+AAsAAAABAAAAAAA9AAAAAAABAAAAAAA+AAAAAAABAAAAAAA/AAAAAAABAAAAAABAAAAAAAABAAAAAABBAAAAAAABAAAAAABBAAEAAAABAAAAAABBAAIAAAABAAAAAABCAAAAAAAAAAAAAABCAAEAAAAAAAAAAABCAAIAAAAAAAAAAABDAAAAAAABAAAAAABDAAEAAAABAAAAAABDAAIAAAABAAAAAABCAAMAAAAAAAAAAABCAAQAAAAAAAAAAABCAAUAAAAAAAAAAABDAAMAAAABAAAAAABDAAQAAAABAAAAAABDAAUAAAABAAAAAAA/AAsAAAABAAAAAABAAAsAAAABAAAAAABBAAsAAAABAAAAAABCAAsAAAABAAAAAABDAAsAAAABAAAAAABEAAsAAAABAAAAAABCAAYAAAAAAAAAAABCAAcAAAABAAAAAABDAAYAAAABAAAAAABCAAgAAAABAAAAAABDAAcAAAABAAAAAABFAAsAAAABAAAAAABGAAsAAAABAAAAAABHAAsAAAABAAAAAABIAAsAAAABAAAAAABJAAsAAAAAAAAAAAAnAAgAAAAAAAAAAAAhAAYAAAABAAAAAAAiAAYAAAABAAAAAAAjAAYAAAABAAAAAAAnAAQAAAAAAAAAAAAmAAMAAAABAAAAAAAnAAMAAAAAAAAAAAA9AAUAAAAAAAAAAAA9AAYAAAAAAAAAAAA+AAUAAAAAAAAAAAA+AAYAAAAAAAAAAABEAAYAAAABAAAAAABEAAcAAAABAAAAAABKAAsAAAABAAAAAABLAAsAAAABAAAAAABMAAsAAAABAAAAAABNAAsAAAABAAAAAABOAAsAAAABAAAAAABHAAgAAAABAAAAAABHAAkAAAABAAAAAABHAAoAAAABAAAAAABIAAgAAAAAAAAAAABIAAkAAAAAAAAAAABIAAoAAAAAAAAAAABJAAkAAAABAAAAAABJAAoAAAABAAAAAABKAAoAAAAAAAAAAABLAAoAAAABAAAAAAAhAAQAAAAAAAAAAAAhAAUAAAABAAAAAAAiAAUAAAABAAAAAAA=")
tile_set = SubResource("TileSet_ncow6")

[connection signal="timeout" from="CameraRig/StartDelay" to="CameraRig" method="_on_start_delay_timeout"]
[connection signal="timeout" from="CameraRig/PlayerShip/DeathTimer" to="CameraRig/PlayerShip" method="_on_death_timer_timeout"]
